--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -16,48 +16,8 @@ compatible = "zmk,combos";
     layers = <LAYERS>; \
   };
 
-/*
-
-/* Brackets */
-COMBO(left_parenthesis, &kp LEFT_PARENTHESIS, 1 2, NUM)
-COMBO(right_parenthesis, &kp RIGHT_PARENTHESIS, 2 3, NUM)
-COMBO(left_bracket, &kp LEFT_BRACKET, 11 12, NUM)
-COMBO(right_bracket, &kp RIGHT_BRACKET, 12 13, NUM)
-COMBO(less_than, &kp LESS_THAN, 21 22, NUM)
-COMBO(greater_than, &kp GREATER_THAN, 22 23, NUM)
-
-/* Text processing */
-COMBO(undo, &kp LG(Z), 20 21, BASE)
-COMBO(cut, &kp LG(X), 21 23, BASE)
-COMBO(copy, &kp LG(C), 21 22, BASE)
-COMBO(paste, &kp LG(V), 21 22 23, BASE)
-COMBO(select_all, &kp LG(A), 20 23, BASE)
-COMBO(caps_word, &caps_word, 31 32, BASE)
-
-/* System */
-COMBO(power, &kp C_POWER, 4 5, BASE)
-COMBO(menu_search, &kp LG(LS(SLASH)), 16 17 18, BASE)
-COMBO(spotlight, &kp LG(SPACE), 11 12 13, BASE)
-COMBO(mic_mute_left, &kp LG(BACKSLASH), 13 23, BASE)
-COMBO(mic_mute_right, &kp LG(BACKSLASH), 16 26, BASE)
-
-/* Window management */
-COMBO(tile_left, &kp LG(LC(LA(LEFT))), 26 27, BASE)
-COMBO(tile_right, &kp LG(LC(LA(RIGHT))), 27 28, BASE)
-COMBO(maximize, &kp LG(LC(LA(UP))), 26 27 28, BASE)
-COMBO(center, &kp LG(LC(LA(DOWN))), 26 28, BASE)
-
-/* Media */
-COMBO(volup, &kp C_VOL_UP, 7 17, NAV)
-COMBO(voldown, &kp C_VOL_DN, 17 27, NAV)
-COMBO(playpause, &kp C_PLAY_PAUSE, 26 28, NAV)
-COMBO(prev, &kp C_PREV, 26 27, NAV)
-COMBO(next, &kp C_NEXT, 27 28, NAV)
-
-*/
-
 /* misc */
-COMBO(esc, &kp ESC, 20 21, COL)
+COMBO(esc, &kp ESC, 20 21, COL COLW)
 
 /* mac | win */
 COMBO(switch_to_mac, &to COL, 0 20, COLW)
