--- a/config/cradio.conf
+++ b/config/cradio.conf
@@ -14,3 +14,6 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 # Trying to lower the input lag.
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
+
+# Better compatibility with iPadOS
+CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
