--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -25,12 +25,13 @@ COMBO(less_than, &kp LESS_THAN, 21 22, NUM)
 COMBO(greater_than, &kp GREATER_THAN, 22 23, NUM)
 */
 
-/* Text processing */
+/* Text processing
 COMBO(undo, &kp LG(Z), 20 21, BASE)
-COMBO(cut, &kp LG(X), 21 23, BASE)
 COMBO(copy, &kp LG(C), 21 22, BASE)
+COMBO(cut, &kp LG(X), 21 23, BASE)
 COMBO(paste, &kp LG(V), 21 22 23, BASE)
 COMBO(select_all, &kp LG(A), 20 23, BASE)
+*/
 
 /* misc */
 COMBO(esc, &kp ESC, 20 21, COL COLW)
