--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -16,22 +16,21 @@ compatible = "zmk,combos";
     layers = <LAYERS>; \
   };
 
-/* Brackets 
+/* Brackets */
 COMBO(left_parenthesis, &kp LEFT_PARENTHESIS, 1 2, NUM)
 COMBO(right_parenthesis, &kp RIGHT_PARENTHESIS, 2 3, NUM)
 COMBO(left_bracket, &kp LEFT_BRACKET, 11 12, NUM)
 COMBO(right_bracket, &kp RIGHT_BRACKET, 12 13, NUM)
 COMBO(less_than, &kp LESS_THAN, 21 22, NUM)
 COMBO(greater_than, &kp GREATER_THAN, 22 23, NUM)
-*/
 
-/* Text processing
+/* Text processing */
 COMBO(undo, &kp LG(Z), 20 21, BASE)
 COMBO(copy, &kp LG(C), 21 22, BASE)
 COMBO(cut, &kp LG(X), 21 23, BASE)
 COMBO(paste, &kp LG(V), 21 22 23, BASE)
 COMBO(select_all, &kp LG(A), 20 23, BASE)
-*/
+
 
 /* misc */
 COMBO(esc, &kp ESC, 23 30, COL COLW)
