--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -22,7 +22,7 @@ COMBO(copy, &kp LG(C), 21 22, BASE)
 COMBO(cut, &kp LG(X), 21 23, BASE)
 COMBO(paste, &kp LG(V), 21 22 23, BASE)
 COMBO(select_all, &kp LG(A), 20 23, BASE)
-
+COMBO(caps_word, &caps_word, 31 32, BASE)
 
 /* misc */
 COMBO(esc, &kp ESC, 23 30, COL COLW)
