--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -23,11 +23,11 @@ COMBO(cut, &kp LG(X), 21 23, COL)
 COMBO(paste, &kp LG(V), 21 22 23, COL)
 COMBO(select_all, &kp LG(A), 20 23, COL)
 
-COMBO(undo, &kp LC(Z), 20 21, COLW)
-COMBO(copy, &kp LC(C), 21 22, COLW)
-COMBO(cut, &kp LC(X), 21 23, COLW)
-COMBO(paste, &kp LC(V), 21 22 23, COLW)
-COMBO(select_all, &kp LC(A), 20 23, COLW)
+COMBO(undow, &kp LC(Z), 20 21, COLW)
+COMBO(copyw, &kp LC(C), 21 22, COLW)
+COMBO(cutw, &kp LC(X), 21 23, COLW)
+COMBO(pastew, &kp LC(V), 21 22 23, COLW)
+COMBO(select_allw, &kp LC(A), 20 23, COLW)
 
 COMBO(caps_word, &caps_word, 31 32, COL COLW)
 
