--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -20,13 +20,13 @@ compatible = "zmk,combos";
 COMBO(undo, &kp LG(Z), 20 21, COL)
 COMBO(copy, &kp LG(C), 21 22, COL)
 COMBO(cut, &kp LG(X), 21 23, COL)
-COMBO(paste, &kp LG(V), 21 22 23, COL)
+COMBO(paste, &kp LG(V), 22 24, COL)
 COMBO(select_all, &kp LG(A), 20 23, COL)
 
 COMBO(undow, &kp LC(Z), 20 21, COLW)
 COMBO(copyw, &kp LC(C), 21 22, COLW)
 COMBO(cutw, &kp LC(X), 21 23, COLW)
-COMBO(pastew, &kp LC(V), 21 22 23, COLW)
+COMBO(pastew, &kp LC(V), 22 24, COLW)
 COMBO(select_allw, &kp LC(A), 20 23, COLW)
 
 COMBO(caps_word, &caps_word, 31 32, COL COLW)
