--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -43,7 +43,8 @@ COMBO(enter, &kp ENTER, 23 24, COL COLW)
 COMBO(backspace, &kp BACKSPACE, 0 1, COL COLW)
 
 /* Keyboard */
-COMBO(reset, &reset, 11 12 13 17, COL)
+COMBO(resetL, &reset, 20 21 22 23 24, COL)
+COMBO(resetR, &reset, 25 26 27 28 29, COL)
 COMBO(bootloaderL, &bootloader, 0 1 2 3 4, COL)
 COMBO(bootloaderR, &bootloader, 5 6 7 8 9, COL)
 COMBO(bt0, &bt BT_SEL 0, 27 28 29, COL)
