--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -42,16 +42,9 @@ COMBO(esc, &kp ESC, 23 30, COL COLW)
 COMBO(enter, &kp ENTER, 23 24, COL COLW)
 COMBO(backspace, &kp BACKSPACE, 0 1, COL COLW)
 
-/* Keyboard */
-COMBO(resetL, &reset, 20 21 22 23 24, COL)
-COMBO(resetR, &reset, 25 26 27 28 29, COL)
-COMBO(bootloaderL, &bootloader, 0 1 2 3 4, COL)
-COMBO(bootloaderR, &bootloader, 5 6 7 8 9, COL)
-COMBO(bt0, &bt BT_SEL 0, 27 28 29, COL)
-COMBO(bt1, &bt BT_SEL 1, 26 27 28, COL)
-COMBO(bt2, &bt BT_SEL 2, 25 26 27, COL)
-COMBO(bttog, &out OUT_TOG, 11 12 13, NAV)
-COMBO(btclear, &bt BT_CLR, 4 24, COL)
+COMBO(misc_layer, &to COL, 4 20, SYM)
+COMBO(misc_layer, &to COL, 5 29, NAV)
+
 
 #define GCOMBO(NAME, BINDINGS, KEYPOS) \
   combo_##NAME { \
