--- a/config/cradio.conf
+++ b/config/cradio.conf
@@ -17,3 +17,5 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 
 # Better compatibility with iPadOS
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
+
+CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=8
