--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -39,7 +39,7 @@ COMBO(select_allw, &kp LC(A), 20 23, COLW)
 
 COMBO(caps_word, &caps_word, 31 32, COL COLW)
 
-COMBO(caps_word, &key_repeat, 15 25, COL COLW)
+COMBO(key_repeat, &key_repeat, 15 25, COL COLW)
 
 /* misc */
 COMBO(alfred, &kp LG(SPACE), 24 25, COL)
