--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -64,3 +64,4 @@ COMBO(misc_layerR, &to MISC, 15 16 17 18, COL)
 /* mac | win */
 GCOMBO(switch_to_mac, &to COL, 0 20)
 GCOMBO(switch_to_win, &to COLW, 9 29)
+GCOMBO(switch_to_ara, &to ARAQ, 8 28)
