misc layer from any layer

--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -52,8 +52,6 @@ COMBO(esc, &kp ESC, 23 30, COL COLW)
 COMBO(enter, &kp ENTER, 14 24, COL COLW)
 COMBO(backspace, &kp BACKSPACE, 4 14, COL COLW)
 
-COMBO(misc_layertL, &to MISC, 11 12 13 14, COL)
-COMBO(misc_layerR, &to MISC, 15 16 17 18, COL)
 
 #define GCOMBO(NAME, BINDINGS, KEYPOS) \
   combo_##NAME { \
@@ -65,3 +63,6 @@ COMBO(misc_layerR, &to MISC, 15 16 17 18, COL)
 GCOMBO(switch_to_mac, &to COL, 0 20)
 GCOMBO(switch_to_win, &to COLW, 9 29)
 GCOMBO(switch_to_ara, &to ARAQ, 8 28)
+
+GCOMBO(misc_layertL, &to MISC, 11 12 13 14)
+GCOMBO(misc_layerR, &to MISC, 15 16 17 18)
