--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -17,12 +17,12 @@ compatible = "zmk,combos";
   };
 
 /* Brackets */
-COMBO(left_brace, &kp LBRC, 1 11, COL COLW)
-COMBO(right_brace, &kp RBRC, 8 18, COL COLW)
-COMBO(left_bracket, &kp LBKT, 2 12, COL COLW)
-COMBO(right_bracket, &kp RBKT, 7 17, COL COLW)
-COMBO(left_parenthesis, &kp LPAR, 3 13, COL COLW)
-COMBO(right_parenthesis, &kp RPAR, 6 16, COL COLW)
+COMBO(left_brace, &kp LBRC, 1 11, COL COLW ARAQ)
+COMBO(right_brace, &kp RBRC, 8 18, COL COLW ARAQ)
+COMBO(left_bracket, &kp LBKT, 2 12, COL COLW ARAQ)
+COMBO(right_bracket, &kp RBKT, 7 17, COL COLW ARAQ)
+COMBO(left_parenthesis, &kp LPAR, 3 13, COL COLW ARAQ)
+COMBO(right_parenthesis, &kp RPAR, 6 16, COL COLW ARAQ)
 
 /* Text processing */
 COMBO(undo, &kp LG(Z), 20 21, COL)
@@ -31,26 +31,26 @@ COMBO(cut, &kp LG(X), 21 23, COL)
 COMBO(paste, &kp LG(V), 21 22 23, COL)
 COMBO(select_all, &kp LG(A), 20 23, COL)
 
-COMBO(undow, &kp LC(Z), 20 21, COLW)
-COMBO(copyw, &kp LC(C), 21 22, COLW)
-COMBO(cutw, &kp LC(X), 21 23, COLW)
-COMBO(pastew, &kp LC(V), 21 22 23, COLW)
-COMBO(select_allw, &kp LC(A), 20 23, COLW)
+COMBO(undow, &kp LC(Z), 20 21, COLW ARAQ)
+COMBO(copyw, &kp LC(C), 21 22, COLW ARAQ)
+COMBO(cutw, &kp LC(X), 21 23, COLW ARAQ)
+COMBO(pastew, &kp LC(V), 21 22 23, COLW ARAQ)
+COMBO(select_allw, &kp LC(A), 20 23, COLW ARAQ)
 
-COMBO(caps_word, &caps_word, 31 32, COL COLW)
+COMBO(caps_word, &caps_word, 31 32, COL COLW ARAQ)
 
-COMBO(key_repeat, &key_repeat, 15 25, COL COLW)
+COMBO(key_repeat, &key_repeat, 15 25, COL COLW ARAQ)
 
 /* misc */
 COMBO(alfred, &kp LG(SPACE), 24 25, COL)
 COMBO(clpbrd, &kp LG(LC(LA(LS(Z)))), 14 15, COL)
 
-COMBO(pwrtys, &kp LG(SPACE), 24 25, COLW)
-COMBO(ditto, &kp LG(LC(LA(LS(Z)))), 14 15, COLW)
+COMBO(pwrtys, &kp LG(SPACE), 24 25, COLW ARAQ)
+COMBO(ditto, &kp LG(LC(LA(LS(Z)))), 14 15, COLW ARAQ)
 
-COMBO(esc, &kp ESC, 23 30, COL COLW)
-COMBO(enter, &kp ENTER, 14 24, COL COLW)
-COMBO(backspace, &kp BACKSPACE, 4 14, COL COLW)
+COMBO(esc, &kp ESC, 23 30, COL COLW ARAQ)
+COMBO(enter, &kp ENTER, 14 24, COL COLW ARAQ)
+COMBO(backspace, &kp BACKSPACE, 4 14, COL COLW ARAQ)
 
 
 #define GCOMBO(NAME, BINDINGS, KEYPOS) \
