--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -56,7 +56,7 @@ COMBO(backspace, &kp BACKSPACE, 4 14, COL COLW ARAQ)
 COMBO(taaa, &kp SQT, 18 19, ARAQ)
 COMBO(geem, &kp LBKT, 7 8, ARAQ)
 COMBO(daal, &kp RBKT, 8 9, ARAQ)
-COMBO(zthal, &kp TILDE, 0 1, ARAQ)
+COMBO(zthal, &kp GRAVE, 0 1, ARAQ)
 
 
 #define GCOMBO(NAME, BINDINGS, KEYPOS) \
