Put eager debouncing back

--- a/config/cradio.conf
+++ b/config/cradio.conf
@@ -4,6 +4,11 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # enable deep sleep support
 CONFIG_ZMK_SLEEP=y
 
+# "Eager Debouncing"
+# Trying to lower the input lag.
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
+
 # the keyboard disconnects from bluetooth.
 # uses very little power, but it may take
 # a few seconds to reconnect after waking.
