--- a/config/combosmini.dtsi
+++ b/config/combosmini.dtsi
@@ -72,6 +72,9 @@ COMBO(scopyw, &kp LC(C), 20 21, SYMW)
 COMBO(scutw, &kp LC(X), 21 22, SYMW)
 COMBO(spastew, &kp LC(V), 20 21 22, SYMW)
 
+COMBO(nav1h, &mo_nav, 26 27, COL COLW ARAQ)
+COMBO(nav1hw, &mo_navW, 26 27, COLW ARAQ)
+
 /*                KEY POSITIONS
 
   ╭────────────────────╮ ╭────────────────────╮
