--- a/config/combosmini.dtsi
+++ b/config/combosmini.dtsi
@@ -74,6 +74,9 @@ COMBO(spastew, &kp LC(V), 20 21 22, SYMW)
 
 COMBO(nav1h, &mo_nav, 26 27, COL COLW ARAQ)
 COMBO(nav1hw, &mo_navW, 26 27, COLW ARAQ)
+COMBO(sym1h, &mo_nav, 28 29, COL COLW ARAQ)
+COMBO(sym1hw, &mo_navW, 28 29, COLW ARAQ)
+
 
 /*                KEY POSITIONS
 
