--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -61,6 +61,11 @@ COMBO(scopyw, &kp LC(C), 21 22, SYMW)
 COMBO(scutw, &kp LC(X), 22 23, SYMW)
 COMBO(spastew, &kp LC(V), 21 22 23, SYMW)
 
+COMBO(nav1h, &mo_nav, 30 31, COL)
+COMBO(nav1hw, &mo_navW, 30 31, COLW ARAQ)
+COMBO(sym1h, &mo_sym, 32 33, COL)
+COMBO(sym1hw, &mo_symW, 32 33, COLW ARAQ)
+
 /*                KEY POSITIONS
 
   ╭────────────────────╮ ╭────────────────────╮
