--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -42,7 +42,7 @@ COMBO(copy, &kp LG(C), 12 22, COL)
 COMBO(paste, &kp LG(V), 21 22 23, COL)
 
 COMBO(undow, &kp LC(Z), 20 21, COLW ARAQ)
-COMBO(redow, &kp LC(Y), 20 22, COL ARAQ)
+COMBO(redow, &kp LC(Y), 20 22, COLW ARAQ)
 
 COMBO(select_allw, &kp LC(A), 20 23, COLW ARAQ)
 
