--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -62,8 +62,9 @@ COMBO(scutw, &kp LC(X), 22 23, SYMW)
 COMBO(spastew, &kp LC(V), 21 22 23, SYMW)
 
 COMBO(nav1h, &mo NAV, 30 31, COL)
-COMBO(nav1hw, &mo NAVW, 30 31, COLW ARAQ)
 COMBO(sym1h, &mo SYM, 32 33, COL)
+
+COMBO(nav1hw, &mo NAVW, 30 31, COLW ARAQ)
 COMBO(sym1hw, &mo SYMW, 32 33, COLW ARAQ)
 
 /*                KEY POSITIONS
@@ -91,8 +92,11 @@ COMBO(key_repeat, &key_repeat, 16 26, COL COLW ARAQ)
 COMBO(delete_word, &kp LA(BACKSPACE), 5 15, COL)
 COMBO(delete_word_win, &kp LC(BACKSPACE), 5 15, COLW ARAQ)
 
-COMBO(nav1h, &mo_nav, 30 31, COL COLW ARAQ)
+COMBO(nav1h, &mo_nav, 30 31, COL)
+COMBO(sym1h, &mo_sym, 32 33, COL)
+
 COMBO(nav1hw, &mo_navW, 30 31, COLW ARAQ)
+COMBO(sym1hw, &mo_symW, 32 33, COLW ARAQ)
 
 #define GCOMBO(NAME, BINDINGS, KEYPOS) \
   combo_##NAME { \
