--- a/config/combosmini.dtsi
+++ b/config/combosmini.dtsi
@@ -20,7 +20,8 @@ compatible = "zmk,combos";
 /* Missing Alphas */
 COMBO(Z, &kp Z, 20 21, COL COLW ARAQ) // Z and ئ
 COMBO(V, &kp V, 21 22, COL COLW) // V
-COMBO(K, &kp J, 7 8, COL COLW) // J
+COMBO(J, &kp J, 7 8, COL COLW) // J
+COMBO(J2, &kp J, 2 3, COL COLW) // J on alternate hand
 COMBO(slash, &kp SLASH, 24  25, COL COLW ARAQ) // slash and ظ
 COMBO(taaa, &kp SQT, 18 19, ARAQ) // ط
 COMBO(geem, &kp LBKT, 7 8, ARAQ) // ج
@@ -72,10 +73,11 @@ COMBO(scopyw, &kp LC(C), 20 21, SYMW)
 COMBO(scutw, &kp LC(X), 21 22, SYMW)
 COMBO(spastew, &kp LC(V), 20 21 22, SYMW)
 
-COMBO(nav1h, &mo NAV, 26 27, COL)
-COMBO(nav1hw, &mo NAVW, 26 27, COLW ARAQ)
-COMBO(sym1h, &mo SYM, 28 29, COL)
-COMBO(sym1hw, &mo SYMW, 28 29, COLW ARAQ)
+COMBO(nav1h, &mo_nav, 26 27, COL)
+COMBO(sym1h, &mo_sym, 28 29, COL)
+
+COMBO(nav1hw, &mo_navW, 26 27, COLW ARAQ)
+COMBO(sym1hw, &mo_symW, 28 29, COLW ARAQ)
 
 /*                KEY POSITIONS
 
