--- a/config/combosmini.dtsi
+++ b/config/combosmini.dtsi
@@ -35,23 +35,28 @@ COMBO(fn10, &kp F10, 21 22, NUM NUMW)
 COMBO(fn11, &kp F11, 23 24, NUM NUMW)
 COMBO(fn12, &kp F12, 24 25, NUM NUMW)
 
+/* HDN experiment */
+COMBO(hdn_z, &kp Z, 20 21, HDN) // Z
+COMBO(hdn_v, &kp V, 21 22, HDN) // V
+COMBO(hdn_q, &kp Q, 1 2, HDN) // Q
+
 /* Brackets */
-COMBO(left_brace, &kp LBRC, 1 11, COL COLW ARAQ)
-COMBO(right_brace, &kp RBRC, 8 18, COL COLW ARAQ)
-COMBO(left_bracket, &kp LBKT, 2 12, COL COLW ARAQ)
-COMBO(right_bracket, &kp RBKT, 7 17, COL COLW ARAQ)
-COMBO(left_parenthesis, &kp LPAR, 3 13, COL COLW ARAQ)
-COMBO(right_parenthesis, &kp RPAR, 6 16, COL COLW ARAQ)
+COMBO(left_brace, &kp LBRC, 1 11, COL COLW ARAQ HDN)
+COMBO(right_brace, &kp RBRC, 8 18, COL COLW ARAQ HDN)
+COMBO(left_bracket, &kp LBKT, 2 12, COL COLW ARAQ HDN)
+COMBO(right_bracket, &kp RBKT, 7 17, COL COLW ARAQ HDN)
+COMBO(left_parenthesis, &kp LPAR, 3 13, COL COLW ARAQ HDN)
+COMBO(right_parenthesis, &kp RPAR, 6 16, COL COLW ARAQ HDN)
 
 /* Text processing */
-COMBO(undo, &kp LG(Z), 10 20, COL)
-COMBO(redo, &kp LG(LS(Z)), 10 21, COL)
+COMBO(undo, &kp LG(Z), 10 20, COL HDN)
+COMBO(redo, &kp LG(LS(Z)), 10 21, COL HDN)
 
-COMBO(select_all, &kp LG(A), 10 22, COL)
+COMBO(select_all, &kp LG(A), 10 22, COL HDN)
 
-COMBO(cut, &kp LG(X), 11 20 , COL)
-COMBO(copy, &kp LG(C), 12 21, COL)
-COMBO(paste, &kp LG(V), 20 21 22, COL)
+COMBO(cut, &kp LG(X), 11 20 , COL HDN)
+COMBO(copy, &kp LG(C), 12 21, COL HDN)
+COMBO(paste, &kp LG(V), 20 21 22, COL HDN)
 
 COMBO(undow, &kp LC(Z), 10 20, COLW ARAQ)
 COMBO(redow, &kp LC(Y), 10 21, COLW ARAQ)
@@ -62,7 +67,7 @@ COMBO(copyw, &kp LC(C), 11 20, COLW ARAQ)
 COMBO(cutw, &kp LC(X), 12 21, COLW ARAQ)
 COMBO(pastew, &kp LC(V), 20 21 22, COLW ARAQ)
 
-COMBO(caps_word, &caps_word, 27 28, COL COLW ARAQ)
+COMBO(caps_word, &caps_word, 27 28, COL COLW ARAQ HDN)
 
 /* Text processing with thumb key*/
 COMBO(scut, &kp LG(X), 20 21 , SYM)
@@ -73,6 +78,7 @@ COMBO(scopyw, &kp LC(C), 20 21, SYMW)
 COMBO(scutw, &kp LC(X), 21 22, SYMW)
 COMBO(spastew, &kp LC(V), 20 21 22, SYMW)
 
+/* one hand */
 COMBO(nav1h, &mo_nav, 26 27, COL)
 COMBO(sym1h, &mo_sym, 28 29, COL)
 
@@ -112,8 +118,10 @@ COMBO(delete_word_win, &kp LC(BACKSPACE), 5 15, COLW ARAQ)
   
 /* mac | win */
 GCOMBO(switch_to_mac, &to COL, 12 13 26)
+GCOMBO(switch_to_hdn, &to HDN, 11 12 26)
 GCOMBO(switch_to_win, &to COLW, 16 17 29)
 GCOMBO(switch_to_ara, &to ARAQ, 17 18 29)
 
 GCOMBO(misc_layertL, &to MISC, 11 12 13 14)
 GCOMBO(misc_layerR, &to MISC, 15 16 17 18)
+
