--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -27,6 +27,7 @@ COMBO(zthal, &kp GRAVE, 0 1, ARAQ) // ذ
 COMBO(hdn_z, &kp Z, 21 22, HDN) // Z
 COMBO(hdn_v, &kp V, 22 23, HDN) // V
 COMBO(hdn_q, &kp Q, 1 2, HDN) // Q
+COMBO(hdn_slash, &kp SLASH, 27 28, HDN) // Slash
 
 /* Brackets */
 COMBO(left_brace, &kp LBRC, 1 11, COL COLW ARAQ HDN)
@@ -46,14 +47,14 @@ COMBO(cut, &kp LG(X), 11 21, COL HDN)
 COMBO(copy, &kp LG(C), 12 22, COL HDN)
 COMBO(paste, &kp LG(V), 21 22 23, COL HDN)
 
-COMBO(undow, &kp LC(Z), 20 21, COLW ARAQ)
-COMBO(redow, &kp LC(Y), 20 22, COLW ARAQ)
+COMBO(undow, &kp LC(Z), 20 21, COLW ARAQ HDNW)
+COMBO(redow, &kp LC(Y), 20 22, COLW ARAQ HDNW)
 
-COMBO(select_allw, &kp LC(A), 20 23, COLW ARAQ)
+COMBO(select_allw, &kp LC(A), 20 23, COLW ARAQ HDNW)
 
-COMBO(cutw, &kp LC(X), 11 21, COLW ARAQ)
-COMBO(copyw, &kp LC(C), 12 22, COLW ARAQ)
-COMBO(pastew, &kp LC(V), 21 22 23, COLW ARAQ)
+COMBO(cutw, &kp LC(X), 11 21, COLW ARAQ HDNW)
+COMBO(copyw, &kp LC(C), 12 22, COLW ARAQ HDNW)
+COMBO(pastew, &kp LC(V), 21 22 23, COLW ARAQ HDNW)
 
 COMBO(caps_word, &caps_word, 31 32, COL COLW ARAQ HDN)
 
@@ -67,11 +68,11 @@ COMBO(scutw, &kp LC(X), 22 23, SYMW)
 COMBO(spastew, &kp LC(V), 21 22 23, SYMW)
 
 /* one hand */
-COMBO(nav1h, &mo NAV, 30 31, COL)
-COMBO(sym1h, &mo SYM, 32 33, COL)
+COMBO(nav1h, &mo NAV, 30 31, COL HDN)
+COMBO(sym1h, &mo SYM, 32 33, COL HDN)
 
-COMBO(nav1hw, &mo NAVW, 30 31, COLW ARAQ)
-COMBO(sym1hw, &mo SYMW, 32 33, COLW ARAQ)
+COMBO(nav1hw, &mo NAVW, 30 31, COLW ARAQ HDNW)
+COMBO(sym1hw, &mo SYMW, 32 33, COLW ARAQ HDNW)
 
 /*                KEY POSITIONS
 
@@ -83,21 +84,22 @@ COMBO(sym1hw, &mo SYMW, 32 33, COLW ARAQ)
               ╰────────╯ ╰────────╯            */
 
 /* misc */
-COMBO(alfred, &kp LG(SPACE), 23 26, COL)
-COMBO(clpbrd, &kp LG(LC(LA(LS(Z)))), 14 15, COL)
+COMBO(alfred, &kp LG(SPACE), 23 26, COL HDN)
+COMBO(clpbrd, &kp LG(LC(LA(LS(Z)))), 14 15, COL HDN)
 
-COMBO(pwrtys, &kp LG(SPACE), 23 26, COLW ARAQ)
-COMBO(ditto, &kp LG(LC(LA(LS(Z)))), 14 15, COLW ARAQ)
+COMBO(pwrtys, &kp LG(SPACE), 23 26, COLW ARAQ HDNW)
+COMBO(ditto, &kp LG(LC(LA(LS(Z)))), 14 15, COLW ARAQ HDNW)
 
-COMBO(esc, &kp ESC, 23 30, COL COLW ARAQ)
-COMBO(enter, &kp ENTER, 13 23, COL COLW ARAQ)
-COMBO(backspace, &kp BACKSPACE, 4 14, COL COLW ARAQ)
+COMBO(esc, &kp ESC, 23 30, COL COLW ARAQ HDN HDNW)
+COMBO(enter, &kp ENTER, 13 23, COL COLW ARAQ HDN HDNW)
+COMBO(backspace, &kp BACKSPACE, 4 14, COL COLW ARAQ HDN HDNW)
 
-COMBO(key_repeat, &key_repeat, 16 26, COL COLW ARAQ)
+COMBO(key_repeat, &key_repeat, 16 26, COL COLW ARAQ HDN HDNW)
 
-COMBO(delete_word, &kp LA(BACKSPACE), 5 15, COL)
-COMBO(delete_word_win, &kp LC(BACKSPACE), 5 15, COLW ARAQ)
+COMBO(delete_word, &kp LA(BACKSPACE), 5 15, COL HDN)
+COMBO(delete_word_win, &kp LC(BACKSPACE), 5 15, COLW ARAQ HDNW)
 
+/* one hand */
 COMBO(nav1h, &mo_nav, 30 31, COL)
 COMBO(sym1h, &mo_sym, 32 33, COL)
 
