--- a/config/combosmini.dtsi
+++ b/config/combosmini.dtsi
@@ -22,7 +22,7 @@ COMBO(Z, &kp Z, 20 21, COL COLW ARAQ) // Z and ئ
 COMBO(V, &kp V, 21 22, COL COLW) // V
 COMBO(J, &kp J, 7 8, COL COLW) // J
 COMBO(J2, &kp J, 2 3, COL COLW) // J on alternate hand
-COMBO(slash, &kp SLASH, 24  25, COL COLW ARAQ) // slash and ظ
+COMBO(slash, &kp SLASH, 24 25, COL COLW ARAQ) // slash and ظ
 COMBO(taaa, &kp SQT, 18 19, ARAQ) // ط
 COMBO(geem, &kp LBKT, 7 8, ARAQ) // ج
 COMBO(daal, &kp RBKT, 8 9, ARAQ) // د
@@ -39,6 +39,7 @@ COMBO(fn12, &kp F12, 24 25, NUM NUMW)
 COMBO(hdn_z, &kp Z, 20 21, HDN) // Z
 COMBO(hdn_v, &kp V, 21 22, HDN) // V
 COMBO(hdn_q, &kp Q, 1 2, HDN) // Q
+COMBO(hdn_slash, &kp SLASH, 24 25, HDN) // Slash
 
 /* Brackets */
 COMBO(left_brace, &kp LBRC, 1 11, COL COLW ARAQ HDN)
@@ -58,16 +59,16 @@ COMBO(cut, &kp LG(X), 11 20 , COL HDN)
 COMBO(copy, &kp LG(C), 12 21, COL HDN)
 COMBO(paste, &kp LG(V), 20 21 22, COL HDN)
 
-COMBO(undow, &kp LC(Z), 10 20, COLW ARAQ)
-COMBO(redow, &kp LC(Y), 10 21, COLW ARAQ)
+COMBO(undow, &kp LC(Z), 10 20, COLW ARAQ HDNW)
+COMBO(redow, &kp LC(Y), 10 21, COLW ARAQ HDNW)
 
-COMBO(select_allw, &kp LC(A), 10 22, COLW ARAQ)
+COMBO(select_allw, &kp LC(A), 10 22, COLW ARAQ HDNW)
 
-COMBO(copyw, &kp LC(C), 11 20, COLW ARAQ)
-COMBO(cutw, &kp LC(X), 12 21, COLW ARAQ)
-COMBO(pastew, &kp LC(V), 20 21 22, COLW ARAQ)
+COMBO(copyw, &kp LC(C), 11 20, COLW ARAQ HDNW)
+COMBO(cutw, &kp LC(X), 12 21, COLW ARAQ HDNW)
+COMBO(pastew, &kp LC(V), 20 21 22, COLW ARAQ HDNW)
 
-COMBO(caps_word, &caps_word, 27 28, COL COLW ARAQ HDN)
+COMBO(caps_word, &caps_word, 27 28, COL COLW ARAQ HDN HDNW)
 
 /* Text processing with thumb key*/
 COMBO(scut, &kp LG(X), 20 21 , SYM)
@@ -79,11 +80,11 @@ COMBO(scutw, &kp LC(X), 21 22, SYMW)
 COMBO(spastew, &kp LC(V), 20 21 22, SYMW)
 
 /* one hand */
-COMBO(nav1h, &mo_nav, 26 27, COL)
-COMBO(sym1h, &mo_sym, 28 29, COL)
+COMBO(nav1h, &mo_nav, 26 27, COL HDN)
+COMBO(sym1h, &mo_sym, 28 29, COL HDN)
 
-COMBO(nav1hw, &mo_navW, 26 27, COLW ARAQ)
-COMBO(sym1hw, &mo_symW, 28 29, COLW ARAQ)
+COMBO(nav1hw, &mo_navW, 26 27, COLW ARAQ HDNW)
+COMBO(sym1hw, &mo_symW, 28 29, COLW ARAQ HDNW)
 
 /*                KEY POSITIONS
 
@@ -95,20 +96,20 @@ COMBO(sym1hw, &mo_symW, 28 29, COLW ARAQ)
               ╰────────╯ ╰────────╯            */
 
 /* misc */
-COMBO(alfred, &kp LG(SPACE), 22 23, COL)
-COMBO(clpbrd, &kp LG(LC(LA(LS(Z)))), 14 15, COL)
+COMBO(alfred, &kp LG(SPACE), 22 23, COL HDN)
+COMBO(clpbrd, &kp LG(LC(LA(LS(Z)))), 14 15, COL HDN)
 
-COMBO(pwrtys, &kp LG(SPACE), 22 23, COLW ARAQ)
-COMBO(ditto, &kp LG(LC(LA(LS(Z)))), 14 15, COLW ARAQ)
+COMBO(pwrtys, &kp LG(SPACE), 22 23, COLW ARAQ HDNW)
+COMBO(ditto, &kp LG(LC(LA(LS(Z)))), 14 15, COLW ARAQ HDNW)
 
-COMBO(esc, &kp ESC, 22 26, COL COLW ARAQ)
-COMBO(enter, &kp ENTER, 13 22, COL COLW ARAQ)
-COMBO(backspace, &kp BACKSPACE, 4 14, COL COLW ARAQ)
+COMBO(esc, &kp ESC, 22 26, COL COLW ARAQ HDN HDNW)
+COMBO(enter, &kp ENTER, 13 22, COL COLW ARAQ HDN HDNW)
+COMBO(backspace, &kp BACKSPACE, 4 14, COL COLW ARAQ HDN HDNW)
 
-COMBO(key_repeat, &key_repeat, 16 23, COL COLW ARAQ)
+COMBO(key_repeat, &key_repeat, 16 23, COL COLW ARAQ HDN HDNW)
 
-COMBO(delete_word, &kp LA(BACKSPACE), 5 15, COL)
-COMBO(delete_word_win, &kp LC(BACKSPACE), 5 15, COLW ARAQ)
+COMBO(delete_word, &kp LA(BACKSPACE), 5 15, COL HDN)
+COMBO(delete_word_win, &kp LC(BACKSPACE), 5 15, COLW ARAQ HDNW)
 
 #define GCOMBO(NAME, BINDINGS, KEYPOS) \
   combo_##NAME { \
