--- a/config/combosmini.dtsi
+++ b/config/combosmini.dtsi
@@ -122,6 +122,7 @@ GCOMBO(switch_to_mac, &to COL, 12 13 26)
 GCOMBO(switch_to_hdn, &to HDN, 11 12 26)
 GCOMBO(switch_to_win, &to COLW, 16 17 29)
 GCOMBO(switch_to_ara, &to ARAQ, 17 18 29)
+GCOMBO(switch_to_hdnw, &to HDNW, 18 19 29)
 
 GCOMBO(misc_layertL, &to MISC, 11 12 13 14)
 GCOMBO(misc_layerR, &to MISC, 15 16 17 18)
