--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -56,23 +56,14 @@ COMBO(cutw, &kp LC(X), 11 21, COLW ARAQ HDNW)
 COMBO(copyw, &kp LC(C), 12 22, COLW ARAQ HDNW)
 COMBO(pastew, &kp LC(V), 21 22 23, COLW ARAQ HDNW)
 
-COMBO(caps_word, &caps_word, 31 32, COL COLW ARAQ HDN)
-
-/* Text processing with thumb key*/
-COMBO(scut, &kp LG(X), 21 22 , SYM)
-COMBO(scopy, &kp LG(C), 22 23, SYM)
-COMBO(spaste, &kp LG(V), 21 22 23, SYM)
-
-COMBO(scopyw, &kp LC(C), 21 22, SYMW)
-COMBO(scutw, &kp LC(X), 22 23, SYMW)
-COMBO(spastew, &kp LC(V), 21 22 23, SYMW)
+COMBO(caps_word, &caps_word, 31 32, COL COLW ARAQ HDN HDNW)
 
 /* one hand */
-COMBO(nav1h, &mo NAV, 30 31, COL HDN)
-COMBO(sym1h, &mo SYM, 32 33, COL HDN)
+COMBO(nav1h, &mo NAV, 30 31, COL)
+COMBO(sym1h, &mo SYM, 32 33, COL)
 
-COMBO(nav1hw, &mo NAVW, 30 31, COLW ARAQ HDNW)
-COMBO(sym1hw, &mo SYMW, 32 33, COLW ARAQ HDNW)
+COMBO(nav1hw, &mo NAVW, 30 31, COLW ARAQ)
+COMBO(sym1hw, &mo SYMW, 32 33, COLW ARAQ)
 
 /*                KEY POSITIONS
 
@@ -93,10 +84,10 @@ COMBO(ditto, &kp LG(LC(LA(LS(Z)))), 14 15, COLW ARAQ HDNW)
 COMBO(esc, &kp ESC, 23 30, COL COLW ARAQ HDN HDNW)
 COMBO(enter, &kp ENTER, 13 23, COL COLW ARAQ HDN HDNW)
 COMBO(backspace, &kp BACKSPACE, 4 14, COL COLW ARAQ HDN HDNW)
-
 COMBO(key_repeat, &key_repeat, 16 26, COL COLW ARAQ HDN HDNW)
 
 COMBO(delete_word, &kp LA(BACKSPACE), 5 15, COL HDN)
+
 COMBO(delete_word_win, &kp LC(BACKSPACE), 5 15, COLW ARAQ HDNW)
 
 /* one hand */
