--- a/config/combosmini.dtsi
+++ b/config/combosmini.dtsi
@@ -70,21 +70,12 @@ COMBO(pastew, &kp LC(V), 20 21 22, COLW ARAQ HDNW)
 
 COMBO(caps_word, &caps_word, 27 28, COL COLW ARAQ HDN HDNW)
 
-/* Text processing with thumb key*/
-COMBO(scut, &kp LG(X), 20 21 , SYM)
-COMBO(scopy, &kp LG(C), 21 22, SYM)
-COMBO(spaste, &kp LG(V), 20 21 22, SYM)
-
-COMBO(scopyw, &kp LC(C), 20 21, SYMW)
-COMBO(scutw, &kp LC(X), 21 22, SYMW)
-COMBO(spastew, &kp LC(V), 20 21 22, SYMW)
-
 /* one hand */
-COMBO(nav1h, &mo_nav, 26 27, COL HDN)
-COMBO(sym1h, &mo_sym, 28 29, COL HDN)
+COMBO(nav1h, &mo_nav, 26 27, COL)
+COMBO(sym1h, &mo_sym, 28 29, COL)
 
-COMBO(nav1hw, &mo_navW, 26 27, COLW ARAQ HDNW)
-COMBO(sym1hw, &mo_symW, 28 29, COLW ARAQ HDNW)
+COMBO(nav1hw, &mo_navW, 26 27, COLW ARAQ)
+COMBO(sym1hw, &mo_symW, 28 29, COLW ARAQ)
 
 /*                KEY POSITIONS
 
@@ -105,10 +96,10 @@ COMBO(ditto, &kp LG(LC(LA(LS(Z)))), 14 15, COLW ARAQ HDNW)
 COMBO(esc, &kp ESC, 22 26, COL COLW ARAQ HDN HDNW)
 COMBO(enter, &kp ENTER, 13 22, COL COLW ARAQ HDN HDNW)
 COMBO(backspace, &kp BACKSPACE, 4 14, COL COLW ARAQ HDN HDNW)
-
 COMBO(key_repeat, &key_repeat, 16 23, COL COLW ARAQ HDN HDNW)
 
 COMBO(delete_word, &kp LA(BACKSPACE), 5 15, COL HDN)
+
 COMBO(delete_word_win, &kp LC(BACKSPACE), 5 15, COLW ARAQ HDNW)
 
 #define GCOMBO(NAME, BINDINGS, KEYPOS) \
