add missing  to hndw

--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -24,18 +24,18 @@ COMBO(daal, &kp RBKT, 8 9, ARAQ) // د
 COMBO(zthal, &kp GRAVE, 0 1, ARAQ) // ذ
 
 /* HDN experiment */
-COMBO(hdn_z, &kp Z, 21 22, HDN) // Z
-COMBO(hdn_v, &kp V, 22 23, HDN) // V
-COMBO(hdn_q, &kp Q, 1 2, HDN) // Q
-COMBO(hdn_slash, &kp SLASH, 27 28, HDN) // Slash
+COMBO(hdn_z, &kp Z, 21 22, HDN HDNW) // Z
+COMBO(hdn_v, &kp V, 22 23, HDN HDNW) // V
+COMBO(hdn_q, &kp Q, 1 2, HDN HDNW) // Q
+COMBO(hdn_slash, &kp SLASH, 27 28, HDN HDNW) // Slash
 
 /* Brackets */
-COMBO(left_brace, &kp LBRC, 1 11, COL COLW ARAQ HDN)
-COMBO(right_brace, &kp RBRC, 8 18, COL COLW ARAQ HDN)
-COMBO(left_bracket, &kp LBKT, 2 12, COL COLW ARAQ HDN)
-COMBO(right_bracket, &kp RBKT, 7 17, COL COLW ARAQ HDN)
-COMBO(left_parenthesis, &kp LPAR, 3 13, COL COLW ARAQ HDN)
-COMBO(right_parenthesis, &kp RPAR, 6 16, COL COLW ARAQ HDN)
+COMBO(left_brace, &kp LBRC, 1 11, COL COLW ARAQ HDN HNDW)
+COMBO(right_brace, &kp RBRC, 8 18, COL COLW ARAQ HDN HNDW)
+COMBO(left_bracket, &kp LBKT, 2 12, COL COLW ARAQ HDN HNDW)
+COMBO(right_bracket, &kp RBKT, 7 17, COL COLW ARAQ HDN HNDW)
+COMBO(left_parenthesis, &kp LPAR, 3 13, COL COLW ARAQ HDN HNDW)
+COMBO(right_parenthesis, &kp RPAR, 6 16, COL COLW ARAQ HDN HNDW)
 
 /* Text processing */
 COMBO(undo, &kp LG(Z), 20 21, COL HDN)
