--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -30,12 +30,12 @@ COMBO(hdn_q, &kp Q, 1 2, HDN HDNW) // Q
 COMBO(hdn_slash, &kp SLASH, 27 28, HDN HDNW) // Slash
 
 /* Brackets */
-COMBO(left_brace, &kp LBRC, 1 11, COL COLW ARAQ HDN HNDW)
-COMBO(right_brace, &kp RBRC, 8 18, COL COLW ARAQ HDN HNDW)
-COMBO(left_bracket, &kp LBKT, 2 12, COL COLW ARAQ HDN HNDW)
-COMBO(right_bracket, &kp RBKT, 7 17, COL COLW ARAQ HDN HNDW)
-COMBO(left_parenthesis, &kp LPAR, 3 13, COL COLW ARAQ HDN HNDW)
-COMBO(right_parenthesis, &kp RPAR, 6 16, COL COLW ARAQ HDN HNDW)
+COMBO(left_brace, &kp LBRC, 1 11, COL COLW ARAQ HDN HDNW)
+COMBO(right_brace, &kp RBRC, 8 18, COL COLW ARAQ HDN HDNW)
+COMBO(left_bracket, &kp LBKT, 2 12, COL COLW ARAQ HDN HDNW)
+COMBO(right_bracket, &kp RBKT, 7 17, COL COLW ARAQ HDN HDNW)
+COMBO(left_parenthesis, &kp LPAR, 3 13, COL COLW ARAQ HDN HDNW)
+COMBO(right_parenthesis, &kp RPAR, 6 16, COL COLW ARAQ HDN HDNW)
 
 /* Text processing */
 COMBO(undo, &kp LG(Z), 20 21, COL HDN)
