--- a/build.yaml
+++ b/build.yaml
@@ -14,6 +14,8 @@
 ---
 include:
   - board: nice_nano_v2
+    shield: settings_reset
+  - board: nice_nano_v2
     shield: cradio_left
   - board: nice_nano_v2
     shield: cradio_right
@@ -26,5 +28,6 @@ include:
   - board: nice_nano_v2
     shield: battamini_right
   - board: nice_nano_v2
-    shield: settings_reset
-
+    shield: battoota_left
+  - board: nice_nano_v2
+    shield: battoota_right
