--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -23,10 +23,10 @@ COMBO(geem, &kp LBKT, 7 8, ARAQ) // ج
 COMBO(daal, &kp RBKT, 8 9, ARAQ) // د
 COMBO(zthal, &kp GRAVE, 0 1, ARAQ) // ذ
 
-COMBO(Z, &kp Z, 21 22, COL COLW ARAQ) // Z and ئ
-COMBO(V, &kp V, 22 23, COL COLW) // V
-COMBO(J, &kp J, 6 7, COL COLW) // J
-COMBO(J2, &kp J, 2 3, COL COLW) // J on alternate hand
+COMBO(Z, &kp Z, 21 22, COL30 COLW30) // Z 
+COMBO(V, &kp V, 22 23, COL30 COLW30) // V
+COMBO(J, &kp J, 6 7, COL30 COLW30) // J
+COMBO(J2, &kp J, 2 3, COL30 COLW30) // J on alternate hand
 
 /* HDN experiment */
 COMBO(hdn_z, &kp Z, 21 22, HDN HDNW) // Z
@@ -35,33 +35,33 @@ COMBO(hdn_q, &kp Q, 1 2, HDN HDNW) // Q
 COMBO(hdn_slash, &kp SLASH, 27 28, HDN HDNW) // Slash
 
 /* Brackets */
-COMBO(left_brace, &kp LBRC, 1 11, COL COLW ARAQ HDN HDNW)
-COMBO(right_brace, &kp RBRC, 8 18, COL COLW ARAQ HDN HDNW)
-COMBO(left_bracket, &kp LBKT, 2 12, COL COLW ARAQ HDN HDNW)
-COMBO(right_bracket, &kp RBKT, 7 17, COL COLW ARAQ HDN HDNW)
-COMBO(left_parenthesis, &kp LPAR, 3 13, COL COLW ARAQ HDN HDNW)
-COMBO(right_parenthesis, &kp RPAR, 6 16, COL COLW ARAQ HDN HDNW)
+COMBO(left_brace, &kp LBRC, 1 11, COL COLW ARAQ HDN HDNW COL30 COLW30)
+COMBO(right_brace, &kp RBRC, 8 18, COL COLW ARAQ HDN HDNW COL30 COLW30)
+COMBO(left_bracket, &kp LBKT, 2 12, COL COLW ARAQ HDN HDNW COL30 COLW30)
+COMBO(right_bracket, &kp RBKT, 7 17, COL COLW ARAQ HDN HDNW COL30 COLW30)
+COMBO(left_parenthesis, &kp LPAR, 3 13, COL COLW ARAQ HDN HDNW COL30 COLW30)
+COMBO(right_parenthesis, &kp RPAR, 6 16, COL COLW ARAQ HDN HDNW COL30 COLW30)
 
 /* Text processing */
-COMBO(undo, &kp LG(Z), 20 21, COL HDN)
-COMBO(redo, &kp LG(LS(Z)), 20 22, COL HDN)
+COMBO(undo, &kp LG(Z), 20 21, COL HDN COL30)
+COMBO(redo, &kp LG(LS(Z)), 20 22, COL HDN COL30)
 
-COMBO(select_all, &kp LG(A), 20 23, COL HDN)
+COMBO(select_all, &kp LG(A), 20 23, COL HDN COL30)
 
-COMBO(cut, &kp LG(X), 11 21, COL HDN)
-COMBO(copy, &kp LG(C), 12 22, COL HDN)
-COMBO(paste, &kp LG(V), 21 22 23, COL HDN)
+COMBO(cut, &kp LG(X), 11 21, COL HDN COL30)
+COMBO(copy, &kp LG(C), 12 22, COL HDN COL30)
+COMBO(paste, &kp LG(V), 21 22 23, COL HDN COL30)
 
-COMBO(undow, &kp LC(Z), 20 21, COLW ARAQ HDNW)
-COMBO(redow, &kp LC(Y), 20 22, COLW ARAQ HDNW)
+COMBO(undow, &kp LC(Z), 20 21, COLW ARAQ HDNW COLW30)
+COMBO(redow, &kp LC(Y), 20 22, COLW ARAQ HDNW COLW30)
 
-COMBO(select_allw, &kp LC(A), 20 23, COLW ARAQ HDNW)
+COMBO(select_allw, &kp LC(A), 20 23, COLW ARAQ HDNW COLW30)
 
-COMBO(cutw, &kp LC(X), 11 21, COLW ARAQ HDNW)
-COMBO(copyw, &kp LC(C), 12 22, COLW ARAQ HDNW)
-COMBO(pastew, &kp LC(V), 21 22 23, COLW ARAQ HDNW)
+COMBO(cutw, &kp LC(X), 11 21, COLW ARAQ HDNW COLW30)
+COMBO(copyw, &kp LC(C), 12 22, COLW ARAQ HDNW COLW30)
+COMBO(pastew, &kp LC(V), 21 22 23, COLW ARAQ HDNW COLW30)
 
-COMBO(caps_word, &caps_word, 31 32, COL COLW ARAQ HDN HDNW)
+COMBO(caps_word, &caps_word, 31 32, COL COLW ARAQ HDN HDNW COL30 COLW30)
 
 /*                KEY POSITIONS
 
@@ -73,27 +73,27 @@ COMBO(caps_word, &caps_word, 31 32, COL COLW ARAQ HDN HDNW)
               ╰────────╯ ╰────────╯            */
 
 /* misc */
-COMBO(alfred, &kp LG(SPACE), 23 26, COL HDN)
-COMBO(clpbrd, &kp LG(LC(LA(LS(Z)))), 14 15, COL HDN)
+COMBO(alfred, &kp LG(SPACE), 23 26, COL HDN COL30)
+COMBO(clpbrd, &kp LG(LC(LA(LS(Z)))), 14 15, COL HDN COL30)
 
-COMBO(pwrtys, &kp LG(SPACE), 23 26, COLW ARAQ HDNW)
-COMBO(ditto, &kp LG(LC(LA(LS(Z)))), 14 15, COLW ARAQ HDNW)
+COMBO(pwrtys, &kp LG(SPACE), 23 26, COLW ARAQ HDNW COLW30)
+COMBO(ditto, &kp LG(LC(LA(LS(Z)))), 14 15, COLW ARAQ HDNW COLW30)
 
-COMBO(esc, &kp ESC, 23 30, COL COLW ARAQ HDN HDNW)
-COMBO(enter, &kp ENTER, 13 23, COL COLW ARAQ HDN HDNW)
-COMBO(backspace, &kp BACKSPACE, 4 14, COL COLW ARAQ HDN HDNW)
-COMBO(key_repeat, &key_repeat, 16 26, COL COLW ARAQ HDN HDNW)
+COMBO(esc, &kp ESC, 23 30, COL COLW ARAQ HDN HDNW COL30 COLW30) 
+COMBO(enter, &kp ENTER, 13 23, COL COLW ARAQ HDN HDNW COL30 COLW30)
+COMBO(backspace, &kp BACKSPACE, 4 14, COL COLW ARAQ HDN HDNW COL30 COLW30)
+COMBO(key_repeat, &key_repeat, 16 26, COL COLW ARAQ HDN HDNW COL30 COLW30)
 
-COMBO(delete_word, &kp LA(BACKSPACE), 5 15, COL HDN)
+COMBO(delete_word, &kp LA(BACKSPACE), 5 15, COL HDN COL30)
 
-COMBO(delete_word_win, &kp LC(BACKSPACE), 5 15, COLW ARAQ HDNW)
+COMBO(delete_word_win, &kp LC(BACKSPACE), 5 15, COLW ARAQ HDNW COLW30)
 
 /* one hand */
-COMBO(nav1h, &mo_nav, 30 31, COL HDN)
-COMBO(sym1h, &mo_sym, 32 33, COL HDN)
+COMBO(nav1h, &mo_nav, 30 31, COL HDN COL30)
+COMBO(sym1h, &mo_sym, 32 33, COL HDN COL30)
 
-COMBO(nav1hw, &mo_navW, 30 31, COLW ARAQ HDNW)
-COMBO(sym1hw, &mo_symW, 32 33, COLW ARAQ HDNW)
+COMBO(nav1hw, &mo_navW, 30 31, COLW ARAQ HDNW COLW30)
+COMBO(sym1hw, &mo_symW, 32 33, COLW ARAQ HDNW COLW30)
 
 #define GCOMBO(NAME, BINDINGS, KEYPOS) \
   combo_##NAME { \
