--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -75,18 +75,20 @@ COMBO(caps_word, &caps_word, 31 32, COL COLW ARAQ HDN HDNW COL30 COLW30)
 /* misc */
 COMBO(alfred, &kp LG(SPACE), 23 26, COL HDN COL30)
 COMBO(clpbrd, &kp LG(LC(LA(LS(Z)))), 14 15, COL HDN COL30)
+COMBO(clpbrd, &kp LG(LC(LA(LS(Z)))), 13 14, COL HDN COL30)
 
 COMBO(pwrtys, &kp LG(SPACE), 23 26, COLW ARAQ HDNW COLW30)
 COMBO(ditto, &kp LG(LC(LA(LS(Z)))), 14 15, COLW ARAQ HDNW COLW30)
+COMBO(ditto, &kp LG(LC(LA(LS(Z)))), 13 14, COLW ARAQ HDNW COLW30)
 
 COMBO(esc, &kp ESC, 23 30, COL COLW ARAQ HDN HDNW COL30 COLW30) 
 COMBO(enter, &kp ENTER, 13 23, COL COLW ARAQ HDN HDNW COL30 COLW30)
-COMBO(backspace, &kp BACKSPACE, 4 14, COL COLW ARAQ HDN HDNW COL30 COLW30)
+COMBO(backspace, &kp BACKSPACE, 14 24, COL COLW ARAQ HDN HDNW COL30 COLW30)
 COMBO(key_repeat, &key_repeat, 16 26, COL COLW ARAQ HDN HDNW COL30 COLW30)
 
-COMBO(delete_word, &kp LA(BACKSPACE), 5 15, COL HDN COL30)
+COMBO(delete_word, &kp LA(BACKSPACE), 15 25, COL HDN COL30)
 
-COMBO(delete_word_win, &kp LC(BACKSPACE), 5 15, COLW ARAQ HDNW COLW30)
+COMBO(delete_word_win, &kp LC(BACKSPACE), 15 25, COLW ARAQ HDNW COLW30)
 
 /* one hand */
 COMBO(nav1h, &mo_nav, 30 31, COL HDN COL30)
