--- a/config/combosmini.dtsi
+++ b/config/combosmini.dtsi
@@ -19,9 +19,8 @@ compatible = "zmk,combos";
 
 /* Missing Alphas */
 COMBO(Z, &kp Z, 20 21, COL COLW ARAQ) // Z and ئ
-COMBO(V, &kp V, 21 22, COL COLW) // V
-COMBO(J, &kp J, 6 7, COL COLW) // J
-COMBO(J2, &kp J, 2 3, COL COLW) // J on alternate hand
+COMBO(Q, &kp Q, 1 2, COL COLW) // Q
+COMBO(J, &kp J, 2 3, COL COLW) // J
 COMBO(slash, &kp SLASH, 24 25, COL COLW ARAQ) // slash and ظ
 COMBO(taaa, &kp SQT, 18 19, ARAQ) // ط
 COMBO(geem, &kp LBKT, 7 8, ARAQ) // ج
