fix clipboard layer.

--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -77,11 +77,11 @@ COMBO(caps_word, &caps_word, 31 32, COL COLW ARAQ HDN HDNW COL30 COLW30)
 /* misc */
 COMBO(alfred, &kp LG(SPACE), 23 26, COL HDN COL30)
 COMBO(clpbrd, &kp LG(LC(LA(LS(Z)))), 14 15, COL HDN COL30)
-COMBO(clpbrd, &kp LG(LC(LA(LS(Z)))), 13 14, COL HDN COL30)
+COMBO(clpbrd1hand, &kp LG(LC(LA(LS(Z)))), 13 14, COL HDN COL30)
 
 COMBO(pwrtys, &kp LG(SPACE), 23 26, COLW ARAQ HDNW COLW30)
 COMBO(ditto, &kp LG(LC(LA(LS(Z)))), 14 15, COLW ARAQ HDNW COLW30)
-COMBO(ditto, &kp LG(LC(LA(LS(Z)))), 13 14, COLW ARAQ HDNW COLW30)
+COMBO(ditto1hand, &kp LG(LC(LA(LS(Z)))), 13 14, COLW ARAQ HDNW COLW30)
 
 COMBO(esc, &kp ESC, 23 30, COL COLW ARAQ HDN HDNW COL30 COLW30) 
 COMBO(enter, &kp ENTER, 13 23, COL COLW ARAQ HDN HDNW COL30 COLW30)
