--- a/config/combosmini.dtsi
+++ b/config/combosmini.dtsi
@@ -29,6 +29,9 @@ COMBO(zthal, &kp GRAVE, 0 1, ARAQ) // ذ
 COMBO(zthal, &kp N, 23 24, ARAQ) // ى
 COMBO(YA2, &kp Z, 20 21, ARAQ) // ئ
 
+COMBO(xero, &kp N0, 16 17, SYM SYMW) // 0
+
+
 /* Brackets */
 COMBO(left_bracket, &kp LBKT, 1 11, COL COLW ARAQ)
 COMBO(right_bracket, &kp RBKT, 8 18, COL COLW ARAQ)
