--- a/config/boards/shields/battoota/battoota.dtsi
+++ b/config/boards/shields/battoota/battoota.dtsi
@@ -26,12 +26,12 @@
 		>;
 	};
 
-	kscan_faceup: kscan {
+	/omit-if-no-ref/ kscan_facedown: kscan {
 		compatible = "zmk,kscan-gpio-direct";
 		label = "KSCAN";
     };
 
-	kscan_facedown: kscan {
+	/omit-if-no-ref/ kscan_faceup: kscan {
 		compatible = "zmk,kscan-gpio-direct";
 		label = "KSCAN";
     };
