--- a/config/combosmini.dtsi
+++ b/config/combosmini.dtsi
@@ -63,11 +63,11 @@ COMBO(pastew, &kp LC(V), 20 21 22, COLW ARAQ)
 COMBO(caps_word, &caps_word, 27 28, COL COLW ARAQ)
 
 /* one hand */
-COMBO(nav1h, &mo_nav, 26 27, COL)
-COMBO(sym1h, &mo_sym, 28 29, COL)
+COMBO(nav1h, &macro_nav, 26 27, COL)
+COMBO(sym1h, &macro_sym, 28 29, COL)
 
-COMBO(nav1hw, &mo_navW, 26 27, COLW ARAQ)
-COMBO(sym1hw, &mo_symW, 28 29, COLW ARAQ)
+COMBO(nav1hw, &macro_navW, 26 27, COLW ARAQ)
+COMBO(sym1hw, &macro_symW, 28 29, COLW ARAQ)
 
 /*                KEY POSITIONS
 
