--- a/config/combosmini.dtsi
+++ b/config/combosmini.dtsi
@@ -101,8 +101,12 @@ COMBO(delete_word_win, &kp LC(BACKSPACE), 5 15, COLW ARAQ)
   };
   
 /* mac | win */
-GCOMBO(switch_to_mac, &to COL, 12 13 26)
-GCOMBO(switch_to_win, &to COLW, 16 17 29)
+GCOMBO(switch_to_mac, &to COL, 12 13 30)
+GCOMBO(switch_to_cus_mac, &to CUS, 10 11 30)
+
+GCOMBO(switch_to_win, &to COLW, 16 17 33)
+GCOMBO(switch_to_cus_win, &to CUSW, 18 19 33)
+
 GCOMBO(switch_to_ara, &to ARAQ, 17 18 29)
 
 GCOMBO(misc_layertL, &to MISC, 11 12 13 14)
