--- a/build.yaml
+++ b/build.yaml
@@ -31,3 +31,7 @@ include:
     shield: battoota_left
   - board: nice_nano_v2
     shield: battoota_right
+  - board: nice_nano_v2
+    shield: battootaone_left
+  - board: nice_nano_v2
+    shield: battootaone_right
