--- a/build.yaml
+++ b/build.yaml
@@ -15,18 +15,18 @@
 include:
   - board: nice_nano_v2
     shield: settings_reset
-  - board: nice_nano_v2
-    shield: cradio_left
-  - board: nice_nano_v2
-    shield: cradio_right
-  - board: nice_nano_v2
-    shield: batta_left
-  - board: nice_nano_v2
-    shield: batta_right
-  - board: nice_nano_v2
-    shield: battamini_left
-  - board: nice_nano_v2
-    shield: battamini_right
+  # - board: nice_nano_v2
+  #   shield: cradio_left
+  # - board: nice_nano_v2
+  #   shield: cradio_right
+  # - board: nice_nano_v2
+  #   shield: batta_left
+  # - board: nice_nano_v2
+  #   shield: batta_right
+  # - board: nice_nano_v2
+  #   shield: battamini_left
+  # - board: nice_nano_v2
+  #   shield: battamini_right
   - board: nice_nano_v2
     shield: battoota_left
   - board: nice_nano_v2
