--- a/config/combosmini.dtsi
+++ b/config/combosmini.dtsi
@@ -12,7 +12,7 @@ compatible = "zmk,combos";
 #define COMBO(NAME, BINDINGS, KEYPOS, LAYERS) \
   combo_##NAME { \
     bindings = <BINDINGS>; \
-    timeout-ms = <20>; \
+    timeout-ms = <40>; \
     key-positions = <KEYPOS>; \
     layers = <LAYERS>; \
   };
@@ -49,7 +49,7 @@ COMBO(select_all, &kp LG(A), 10 22, COL)
 
 COMBO(cut, &kp LG(X), 11 20 , COL)
 COMBO(copy, &kp LG(C), 12 21, COL)
-COMBO(paste, &kp LG(V), 20 22, COL)
+COMBO(paste, &kp LG(V), 20 21 22, COL)
 
 COMBO(undow, &kp LC(Z), 10 20, COLW ARAQ)
 COMBO(redow, &kp LC(Y), 10 21, COLW ARAQ)
@@ -58,7 +58,7 @@ COMBO(select_allw, &kp LC(A), 10 22, COLW ARAQ)
 
 COMBO(copyw, &kp LC(C), 11 20, COLW ARAQ)
 COMBO(cutw, &kp LC(X), 12 21, COLW ARAQ)
-COMBO(pastew, &kp LC(V), 20 22, COLW ARAQ)
+COMBO(pastew, &kp LC(V), 20 21 22, COLW ARAQ)
 
 COMBO(caps_word, &caps_word, 27 28, COL COLW ARAQ)
 
