remove debouce options from config

--- a/config/battoota.conf
+++ b/config/battoota.conf
@@ -6,8 +6,8 @@ CONFIG_ZMK_SLEEP=y
 
 # "Eager Debouncing"
 # Trying to lower the input lag.
-CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
-CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
+# CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
+# CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 
 # the keyboard disconnects from bluetooth.
 # uses very little power, but it may take
