--- a/config/combosmini.dtsi
+++ b/config/combosmini.dtsi
@@ -32,6 +32,7 @@ COMBO(YA2, &kp Z, 20 21, ARAQ) // ئ
 
 COMBO(dot, &kp DOT, 16 17, SYM SYMW) // .
 COMBO(comma, &kp COMMA, 17 18, SYM SYMW) // ,
+COMBO(space_sym, &kp SPACE, 21 22, SYM SYMW) // space on symbols
 
 /* Brackets */
 COMBO(left_bracket, &kp LBKT, 1 11, COL COLW ARAQ CUS CUSW)
@@ -46,9 +47,17 @@ COMBO(cut, &kp LG(X), 11 20 , COL CUS)
 COMBO(copy, &kp LG(C), 12 21, COL CUS)
 COMBO(paste, &kp LG(V), 20 21 22, COL CUS)
 
+COMBO(redo, &kp LG(LS(Z)), 3 4, COL CUS)
+COMBO(undo, &kp LG(Z), 13 14, COL CUS)
+COMBO(select_all, &kp LG(A), 1 2 3, COL CUS)
+
 COMBO(cutw, &kp LC(X), 11 20, COLW ARAQ CUSW)
 COMBO(copyw, &kp LC(C), 12 21, COLW ARAQ CUSW)
 COMBO(pastew, &kp LC(V), 20 21 22, COLW ARAQ CUSW)
+
+COMBO(redow, &kp LG(LS(Z)), 3 4, COLW ARAQ CUSW)
+COMBO(undow, &kp LG(Z), 13 14, COLW ARAQ CUSW)
+COMBO(select_allw, &kp LG(A), 1 2 3, COLW ARAQ CUSW)
 
 COMBO(caps_word, &caps_word, 27 28, COL COLW ARAQ CUS CUSW)
 
@@ -85,8 +94,10 @@ COMBO(backspace, &kp BACKSPACE, 4 14, COL COLW ARAQ CUS CUSW)
 COMBO(key_repeat, &key_repeat, 16 23, COL COLW ARAQ CUS CUSW)
 
 COMBO(delete_word, &kp LA(BACKSPACE), 5 15, COL CUS)
-
 COMBO(delete_word_win, &kp LC(BACKSPACE), 5 15, COLW ARAQ CUSW)
+
+COMBO(lock_screen, &kp LG(LC(Q)), 6 7 8, NAV)
+COMBO(lock_screenw, &kp LG(L), 6 7 8, NAVW)
 
 #define GCOMBO(NAME, BINDINGS, KEYPOS) \
   combo_##NAME { \
@@ -102,6 +113,9 @@ GCOMBO(switch_to_ara, &to ARAQ, 17 18 29)
 GCOMBO(switch_to_cus_mac, &to CUS, 10 11 26)
 GCOMBO(switch_to_cus_win, &to CUSW, 18 19 29)
 
-GCOMBO(misc_layertL, &to MISC, 11 12 13 14)
-GCOMBO(misc_layerR, &to MISC, 15 16 17 18)
-
+/* bluetooth */
+COMBO(bt_clear, &bt BT_CLR, 11 12 13, NAV NAVW)
+COMBO(bt_0, &bt BT_SEL 0, 20 21, NAV NAVW)
+COMBO(bt_1, &bt BT_SEL 1, 21 22, NAV NAVW)
+COMBO(bt_2, &bt BT_SEL 2, 1 2, NAV NAVW)
+COMBO(bt_3, &bt BT_SEL 3, 2 3, NAV NAVW)
