--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -12,12 +12,8 @@
 
 
 /* layers */
-MACRO(nav, &macro_tap &kp K_CANCEL &macro_press &mo NAV &macro_pause_for_release &macro_release &mo NAV, 0, 0)
-MACRO(sym, &macro_tap &kp K_CANCEL &macro_press &mo SYM &macro_pause_for_release &macro_release &mo SYM, 0, 0)
+MACRO(nav, &macro_tap &macro_press &mo NAV &macro_pause_for_release &macro_release &mo NAV, 0, 0)
+MACRO(sym, &macro_tap &macro_press &mo SYM &macro_pause_for_release &kp K_CANCEL &macro_release &mo SYM, 0, 0)
 
-MACRO(navW, &macro_tap &kp K_CANCEL &macro_press &mo NAVW &macro_pause_for_release &macro_release &mo NAVW, 0, 0)
-MACRO(symW, &macro_tap &kp K_CANCEL &macro_press &mo SYMW &macro_pause_for_release &macro_release &mo SYMW, 0, 0)
-
-/* Suspend macOS by holding power key for 1 second */
-MACRO(power, &macro_tap_time 1000 &kp C_POWER, 30, 40)
-MACRO(sleep, &macro_tap_time 1000 &kp C_SLEEP, 30, 40)
+MACRO(navW, &macro_tap &macro_press &mo NAVW &macro_pause_for_release &kp K_CANCEL &macro_release &mo NAVW, 0, 0)
+MACRO(symW, &macro_tap &macro_press &mo SYMW &macro_pause_for_release &kp K_CANCEL &macro_release &mo SYMW, 0, 0)
